--- a/src/components/AdvertisementCard/AdvertisementCard.module.scss
+++ b/src/components/AdvertisementCard/AdvertisementCard.module.scss
@@ -23,10 +23,11 @@
 
 .icon {
   background-color: #505050;
-  width: 5%;
-  height: 5%;
+  width: 30px;
+  height: 30px;
   padding: 13px;
   border-radius: 15px;
+  align-self: center;
 }
 
 .title {
