--- a/src/components/AdPreview/AdPreview.module.scss
+++ b/src/components/AdPreview/AdPreview.module.scss
@@ -13,13 +13,17 @@
 
   display: grid;
   grid-template-columns: 70px 110px;
-  grid-template-rows: 0.4fr 0.6fr;
+  grid-template-rows: 0.4fr 1fr;
   grid-template-areas:
     "category title"
     "category description";
 
   grid-gap: 5px;
   grid-column-gap: 15px;
+
+  &:hover {
+    background-color: #ffffff;
+  }
 }
 
 .title {
@@ -55,4 +59,15 @@
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
+}
+
+.navLink {
+  &:focus,
+  &:hover,
+  &:visited,
+  &:link,
+  &:active {
+    text-decoration: none;
+    color: rgba(23, 29, 12, 0.9);
+  }
 }
