--- a/src/components/LoginDialog/LoginDialog.module.scss
+++ b/src/components/LoginDialog/LoginDialog.module.scss
@@ -17,6 +17,10 @@
 
   box-shadow: -7px 7px 20px rgba(0, 0, 0, 0.16);
   font-family: "Source Sans Pro";
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .title {
