--- a/src/ui/CategoryTile/CategoryTile.module.scss
+++ b/src/ui/CategoryTile/CategoryTile.module.scss
@@ -6,6 +6,10 @@
   margin-right: 50px;
   box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.16);
   position: relative;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .icon {
