--- a/src/components/AdvertisementCard/AdvertisementCard.module.scss
+++ b/src/components/AdvertisementCard/AdvertisementCard.module.scss
@@ -30,6 +30,19 @@
   align-self: center;
 }
 
+.delete {
+  width: 30px;
+  height: 30px;
+  align-self: flex-end;
+  margin-left: 30px;
+
+  &:hover {
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+  }
+}
+
 .title {
   margin-left: 50px;
   padding-left: 10px;
@@ -40,7 +53,6 @@
   border-bottom: 1px solid #505050;
   width: 50%;
   height: 100%;
-  //   align-self: center;
 }
 
 .description {
@@ -49,14 +61,12 @@
   color: #707070;
   font-family: Helvetica Neue;
   font-size: 15px;
-  //   align-self: center;
 }
 
 .interested {
   grid-area: interested;
   border-left: 1px solid #505050;
   display: block;
-  //   margin-top: 30px;
   align-self: center;
   height: 70%;
   display: flex;
